# pretraining-frontend

./: .eslintignore  .eslintrc  .gitignore  .prettierignore  .prettierrc  CLI.md  DEPENDENCIES.md  Pipfile  README.md  jest.config.js  loki.config.js  package.json  tsconfig.json  webpack.config.js
.github/: pull_request_template.md
.husky/: pre-commit
.storybook/: decorators.tsx  main.ts  preview.ts
amplify/: team-provider-info.json
api/: .env  CLI.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/api/: __init__.py  delegates.py  main.py  serve.py  utils.py
api/api/utils/: metagraph.py  wandb.py
api/cron/: main.py  metagraph.cron  utils.py
api/cronjobs/: metagraph.cron
bittensor/: Dockerfile  README.md  requirements.txt
bittensor-api/: pyproject.toml
databank/: multi.json  script.py  test.py  wandb_original_format_data_validator-120-CWSKJXOFP7.json  wandb_original_format_data_validator-120-ULOL6EMF76.json  wandb_original_format_data_validator-148-44ZXHTRCFS.json  wandb_original_format_data_validator-148-52VWN1ASDN.json  wandb_original_format_data_validator-148-MJ6138HRJO.json  wandb_original_format_data_validator-148-O1NLAFA87Y.json  wandb_original_format_data_validator-148-SJDI1673OZ.json  wandb_original_format_data_validator-148-VNJKBNKD34.json  wandb_original_format_data_validator-148-ZO306147S5.json  wandb_original_format_data_validator-159-4VUKP7BQN9.json  wandb_original_format_data_validator-159-K8G8XRTGE6.json  wandb_original_format_data_validator-159-MDC8AO0IM3.json  wandb_original_format_data_validator-159-OXOOUBU2D2.json  wandb_original_format_data_validator-159-P2OW6J8E97.json  wandb_original_format_data_validator-159-TYW62TD60A.json  wandb_original_format_data_validator-189-206YU2QSPQ.json  wandb_original_format_data_validator-191-WRQR1BR11Z.json  wandb_original_format_data_validator-203-5UR1YAKRPV.json  wandb_original_format_data_validator-203-EC16CTFFIY.json  wandb_original_format_data_validator-203-UFWT4FMSES.json  wandb_original_format_data_validator-210-XXQRU4STXK.json  wandb_original_format_data_validator-214-2KQDY9MSAQ.json  wandb_original_format_data_validator-215-4W7SYTUYG1.json  wandb_original_format_data_validator-220-AGQC5YY376.json  (+47 more)
src/: app.tsx  custom.d.ts  index.ejs  utils.ts  (+4 more)
(+119 files in other folders)
