[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["maneetgoyal <mgoyal@manufacanalytics.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.99.1"
uvicorn = {extras = ["standard"], version = "0.22.0"}
bittensor = "^6.5.0"
pandas = "^2.1.4"
cachetools = "^5.3.2"

[tool.poetry.scripts]
start = "api.main:start"
serve = "api.main:serve"

[tool.poetry.group.dev.dependencies]
black = "23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"