[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["maneetgoyal <mgoyal@manufacanalytics.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.99.1"
uvicorn = {extras = ["standard"], version = "0.22.0"}
bittensor = "^6.6.0"
pandas = "^2.1.4"
cachetoolsutils = "^8.3"
torch = "^2.1.2"
wandb = "^0.16.1"
python-dotenv = "^1.0.0"
simplejson = "^3.19.2"
numpy = "^1.26.3"
python-crontab = "^3.0.0"
croniter = "^2.0.1" # This package is needed with "python-crontab" module to run a crontab Ref: https://pypi.org/project/python-crontab/

[tool.poetry.scripts]
start = "api.main:start"
serve = "api.main:serve"
"cron:start:wandb" =   "cron.main:startFetchingValidatorRuns"
"cron:start:bittensor" =   "cron.main:startFetchingMetagraph"
"cron:stop" = "cron.main:stop"


[tool.poetry.group.dev.dependencies]
black = "23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"